[gd_scene load_steps=4 format=3 uid="uid://cfnq5ey7daamt"]

[ext_resource type="Script" uid="uid://bcd1gnypfyd4k" path="res://Elements/Interaction/dialog_area.gd" id="1_uk2i1"]
[ext_resource type="PackedScene" uid="uid://cy00ggiurflk4" path="res://Elements/Interaction/PreviewButton.tscn" id="2_14dqk"]
[ext_resource type="Texture2D" uid="uid://xqf5cmnx3x3l" path="res://Assets/img/buttons/mouse_l.png" id="3_sudkv"]

[node name="DialogArea" type="Area2D"]
process_mode = 3
texture_filter = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uk2i1")
metadata/dialogs = []

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PreviewButton" parent="." instance=ExtResource("2_14dqk")]
texture = ExtResource("3_sudkv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
